libs/preprocessor/tests/errors/pe8_if_undefined/source.hpp
#if arma
#include <arma>
#endif
